--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,7 +26,7 @@ formats:
 # # Optionally declare the Python requirements required to build your docs
 python:
     install:
-    - requirements: docs/requirements.txt
+    - requirements: docs/rst/requirements.txt
     - method: pip
       path: .
       extra_requirements:
