--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,13 @@ requires = ["flit_core>=3.12.0,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "VY4E-OptModel"                       # distribution name on PyPI
+name = "el1xr_opt"                       # distribution name on PyPI
 version = "1.0.16"                           # update as you release
 description = "An open-source optimization model for the design and operation of hybrid renewable energy systems."
 readme = { file = "README.rst", content-type = "text/x-rst" }
 requires-python = ">=3.11"
 license = { file = "LICENSE" }
-authors = [{ name = "VY4E Team", email = "erik.alvarez@ri.se" }]
+authors = [{ name = "EL1XR-dev Team", email = "erik.alvarez@ri.se" }]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Science/Research",
@@ -35,17 +35,17 @@ dependencies = [
 ]
 
 [project.scripts]
-vy4e-optmodel = "vy4e_optmodel.oM_Main:main"
+vy4e-optmodel = "el1xr_opt.oM_Main:main"
 
 [project.urls]
-Homepage = "https://vy4e-optmodel.readthedocs.io/en/latest/index.html"
-Repository = "https://github.com/VY4E/VY4E-OptModel"
-Issues = "https://github.com/VY4E/VY4E-OptModel/issues"
+Homepage = "https://el1xr_opt.readthedocs.io/en/latest/index.html"
+Repository = "https://github.com/EL1XR-dev/el1xr_opt"
+Issues = "https://github.com/EL1XR-dev/el1xr_opt/issues"
 
 # Tell Flit which importable module corresponds to this project
 [tool.flit.module]
-name = "vy4e_optmodel"
+name = "el1xr_opt"
 
 # Extra files to include in the sdist (wheel only packages files inside src/)
 [tool.flit.sdist]
-include = ["vy4e_optmodel/docs/img/VY4E-OptModel_logo_v6.png"]
+include = ["el1xr_opt/docs/img/VY4E-OptModel_logo_v6.png"]
