--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
 ]
 
 [project.scripts]
-el1xr-opt = "el1xr_opt.oM_Main:main"
+el1xr-opt = "oM_Main:main"
 el1xr-install-solvers = "el1xr_opt.oM_SolverSetup:ensure_ampl_solvers"
 
 [project.urls]
