--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,17 +35,17 @@ dependencies = [
 ]
 
 [project.scripts]
-el1xr-opt = "oM_Main:main"
-el1xr-install-solvers = "el1xr_opt.oM_SolverSetup:ensure_ampl_solvers"
+el1xr-opt = "el1xr_opt:main"
+el1xr-install-solvers = "el1xr_opt.Modules.oM_SolverSetup:ensure_ampl_solvers"
 
 [project.urls]
 Homepage = "https://el1xr_opt.readthedocs.io/en/latest/index.html"
 Repository = "https://github.com/EL1XR-dev/el1xr_opt"
 Issues = "https://github.com/EL1XR-dev/el1xr_opt/issues"
 
-# Tell Flit which importable module corresponds to this project
-[tool.flit.module]
-name = "el1xr_opt"
+## Tell Flit which importable module corresponds to this project
+#[tool.flit.module]
+#name = "el1xr_opt"
 
 # Extra files to include in the sdist (wheel only packages files inside src/)
 [tool.flit.sdist]
