--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Install dependencies
         run: |
           conda install glpk cartopy
-          pip install el1xr_opt
-          pip install highspy
+#          pip install el1xr_opt
+#          pip install highspy
       - name: Lint with flake8
         run: |
           conda install flake8
