--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           conda install glpk cartopy
+          pip install -r requirements.txt
 #          pip install el1xr_opt
 #          pip install highspy
       - name: Lint with flake8
