--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,30 +5,20 @@
 # Required
 version: 2
 
-# Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-    # You can also specify other tool versions:
-    # nodejs: "19"
-    # rust: "1.64"
-    # golang: "1.19"
 
-# Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: docs/rst/conf.py
+  configuration: docs/rst/conf.py
 
-# If using Sphinx, optionally build your docs in additional formats such as PDF
 formats:
-   - pdf
+  - pdf
 
-# # Optionally declare the Python requirements required to build your docs
 python:
-    install:
+  install:
     - requirements: docs/rst/requirements.txt
     - method: pip
       path: .
-      extra_requirements:
-        - build
-        - docs
+      extra_requirements: [build, docs]
